--- a/develop/index.html
+++ b/develop/index.html
@@ -10,39 +10,34 @@
 <body>
   <!-- top section start -->
   <header>
-      <section>
-          <div>
-              Logo
-          </div>
+    <h1>Logo</h1>
 
-          <!-- menu section start -->
-          <nav>
-            <ul>
-              <li>
-                <a href="#">About Me</a>
-              </li>
-              <li>
-                <a href="#">About Me</a>
-              </li>     
-              <li>
-                <a href="#">About Me</a>
-              </li>   
-              <li>
-                <a href="#">About Me</a>
-              </li>                
-            </ul>
-          </nav>
-          <!-- menu section end -->
-
-      </section>
+    <!-- menu section start -->
+    <nav>
+      <ul>
+        <li>
+          <a href="#">About Me</a>
+        </li>
+        <li>
+          <a href="#">Work</a>
+        </li>     
+        <li>
+          <a href="#">Contact Me</a>
+        </li>   
+        <li>
+          <a href="#">Resume</a>
+        </li>                
+      </ul>
+    </nav>
+    <!-- menu section end -->
   </header>
   <!-- top section end -->
 
   <!-- hero section start -->
-  <section>
+  <section class="hero">
     <!-- lead text -->
     <div>
-
+      <h2>Cool subtitle here</h2>
     </div>
   </section>
   <!-- hero section end -->
