--- a/develop/index.html
+++ b/develop/index.html
@@ -10,7 +10,9 @@
 <body>
   <!-- top section start -->
   <header>
-    <h1>Logo</h1>
+    <div>
+      <h1>Cristobal A Barberis</h1>
+    </div>
 
     <!-- menu section start -->
     <nav>
