--- a/develop/index.html
+++ b/develop/index.html
@@ -44,20 +44,35 @@
   </section>
   <!-- hero section end -->
 
-  <!-- about me section start -->
-  <section>
-    <div>About Me</div>
-    <div>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
-    </div>
-  </section>
+  <!-- main section start -->
+  <section class="main-section">
+    <!-- about me section start -->
+    <section class="content">
+      <div class="section-title">
+        <h2>About <br />Me</h2>
+      </div>
+      <div class="main-content">
+        <p>
+          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+        </p>
+        <br />
+        <p>
+          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+        </p>
+      </div>
+    </section>
 
-  <!-- work section start -->
-  <section>
-    <div>Work</div>
-    <article></article>
+    <!-- work section start -->
+    <section>
+      <div>Work</div>
+      <article></article>
+    </section>
+    <!-- work section end -->
   </section>
-  <!-- work section end -->
+  <!-- main section end -->
 
   <!-- footer section start -->
   <footer>
