work css section

--- a/develop/index.html
+++ b/develop/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cristobal A Barberis - My Portfolio</title>
+  <title>Cristobal A Barberis - Photography Portfolio</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -39,7 +39,7 @@
   <section class="hero">
     <!-- lead text -->
     <div>
-      <h2>Cool subtitle here</h2>
+      <h2>My Photography Portfolio</h2>
     </div>
   </section>
   <!-- hero section end -->
@@ -66,17 +66,72 @@
     </section>
 
     <!-- work section start -->
-    <section>
-      <div>Work</div>
-      <article></article>
+    <section class="content">
+      <div class="section-title">
+        <h2>Work</h2>
+      </div>
+      <div class="main-content">
+        <article>
+          <div class="article-image">
+            <img src="./assets/images/old_building.jpg" alt="">
+            <div class="article-info">
+              <h4>Historic Building</h4>
+              <p>Amsterdam</p>
+            </div>
+          </div>
+          <div class="article-image">
+            <img src="./assets/images/beings.jpg" alt="">
+            <div class="article-info">
+              <h4>Natural Musem</h4>
+              <p>Berlin</p>
+            </div>
+          </div> 
+          <div class="article-image">
+            <img src="./assets/images/berlin.jpg" alt="">
+            <div class="article-info">
+              <h4>Alexanderplatz</h4>
+              <p>Berlin</p>
+            </div>
+          </div>          
+          <div class="article-image">
+            <img src="./assets/images/lock_pads.jpg" alt="">
+            <div class="article-info">
+              <h4>Love Lock Bridge</h4>
+              <p>Paris</p>
+            </div>
+          </div>          
+          <div class="article-image">
+            <img src="./assets/images/italy.jpg" alt="">
+            <div class="article-info">
+              <h4>Lu</h4>
+              <p>Italy</p>
+            </div>
+          </div>
+          <div class="article-image">
+            <img src="./assets/images/louvre.jpg" alt="">
+            <div class="article-info">
+              <h4>Louvre</h4>
+              <p>Paris</p>
+            </div>
+          </div>
+          <div class="article-image">
+            <img src="./assets/images/trini-on-pink.jpg" alt="">
+            <div class="article-info">
+              <h4>Da Vinvi Museum</h4>
+              <p>Milan</p>
+            </div>
+          </div>
+        </article>
+      </div>
     </section>
     <!-- work section end -->
   </section>
   <!-- main section end -->
 
   <!-- footer section start -->
-  <footer>
-    <div>Contact Me</div>
+  <footer class="content">
+    <div class="section-title">
+      <h2>Contact <br />Me</h2>
     <div>
       <ul>
         <li>
