contact me css section

--- a/develop/index.html
+++ b/develop/index.html
@@ -18,13 +18,13 @@
     <nav>
       <ul>
         <li>
-          <a href="#">About Me</a>
+          <a href="#about-me">About Me</a>
         </li>
         <li>
-          <a href="#">Work</a>
+          <a href="#work">Work</a>
         </li>     
         <li>
-          <a href="#">Contact Me</a>
+          <a href="#contact-me">Contact Me</a>
         </li>   
         <li>
           <a href="#">Resume</a>
@@ -48,7 +48,7 @@
   <section class="main-section">
     <!-- about me section start -->
     <section class="content">
-      <div class="section-title">
+      <div id="about-me" class="section-title">
         <h2>About <br />Me</h2>
       </div>
       <div class="main-content">
@@ -67,54 +67,54 @@
 
     <!-- work section start -->
     <section class="content">
-      <div class="section-title">
+      <div id="work" class="section-title">
         <h2>Work</h2>
       </div>
       <div class="main-content">
         <article>
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/old_building.jpg" alt="">
             <div class="article-info">
               <h4>Historic Building</h4>
               <p>Amsterdam</p>
             </div>
           </div>
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/beings.jpg" alt="">
             <div class="article-info">
               <h4>Natural Musem</h4>
               <p>Berlin</p>
             </div>
           </div> 
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/berlin.jpg" alt="">
             <div class="article-info">
               <h4>Alexanderplatz</h4>
               <p>Berlin</p>
             </div>
           </div>          
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/lock_pads.jpg" alt="">
             <div class="article-info">
               <h4>Love Lock Bridge</h4>
               <p>Paris</p>
             </div>
           </div>          
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/italy.jpg" alt="">
             <div class="article-info">
               <h4>Lu</h4>
               <p>Italy</p>
             </div>
           </div>
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/louvre.jpg" alt="">
             <div class="article-info">
               <h4>Louvre</h4>
               <p>Paris</p>
             </div>
           </div>
-          <div class="article-image">
+          <div class="article-detail">
             <img src="./assets/images/trini-on-pink.jpg" alt="">
             <div class="article-info">
               <h4>Da Vinvi Museum</h4>
@@ -125,33 +125,41 @@
       </div>
     </section>
     <!-- work section end -->
+
+    <!-- contact section start -->
+    <section class="content">
+      <div id="contact-me" class="section-title">
+        <h2>Contact <br />Me</h2>
+      </div>
+      <div class="main-content">
+        <nav class="footer-menu">
+          <ul>
+            <li>
+              <a href="tel:">(786) 354-5435</a>
+            </li>
+            <li>
+              <a href="mailto:">cristobal@barberis.com</a>
+            </li>     
+            <li>
+              <a href="https://www.github.com/brberis">GitHub</a>
+            </li>   
+            <li>
+              <a href="https://www.twitter.com/brberis">Twitter</a>
+            </li>      
+            <li>
+              <a href="https://www.instagram.com/brberis">Instagram</a>
+            </li>  
+          </ul>
+        </nav>
+      </div>
+    </section>
+    <!-- contact section end -->
+
   </section>
   <!-- main section end -->
 
   <!-- footer section start -->
-  <footer class="content">
-    <div class="section-title">
-      <h2>Contact <br />Me</h2>
-    <div>
-      <ul>
-        <li>
-          <a href="#">About Me</a>
-        </li>
-        <li>
-          <a href="#">About Me</a>
-        </li>     
-        <li>
-          <a href="#">About Me</a>
-        </li>   
-        <li>
-          <a href="#">About Me</a>
-        </li>      
-        <li>
-          <a href="#">About Me</a>
-        </li>  
-      </ul>
-    </div>
-  </footer>
+
   <!-- footer section end -->
 </body>
 </html>
