--- a/develop/index.html
+++ b/develop/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
   <title>Cristobal A Barberis - Photography Portfolio</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
@@ -11,6 +12,7 @@
   <!-- top section start -->
   <header>
     <div>
+      <img src="./assets/images/avatar.png" alt="Avatar">
       <h1>Cristobal A Barberis</h1>
     </div>
 
@@ -49,6 +51,7 @@
     <!-- about me section start -->
     <section class="content">
       <div id="about-me" class="section-title">
+        <img src="./assets/images/avatar.png" alt="Avatar">
         <h2>About <br />Me</h2>
       </div>
       <div class="main-content">
@@ -73,49 +76,63 @@
       <div class="main-content">
         <article>
           <div class="article-detail">
-            <img src="./assets/images/old_building.jpg" alt="">
+            <a href="https://www.instagram.com/p/2zKEkXxCJR/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/old_building.jpg" alt="Historic building with red windows shutters.">
+            </a>
             <div class="article-info">
               <h4>Historic Building</h4>
               <p>Amsterdam</p>
             </div>
           </div>
           <div class="article-detail">
-            <img src="./assets/images/beings.jpg" alt="">
+            <a href="https://www.instagram.com/p/4xauYsxCGn/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/beings.jpg" alt="Metalic shelfs with all type of species preserved in bottles.">
+            </a>
             <div class="article-info">
               <h4>Natural Musem</h4>
               <p>Berlin</p>
             </div>
           </div> 
           <div class="article-detail">
-            <img src="./assets/images/berlin.jpg" alt="">
+            <a href="https://www.instagram.com/p/1grlYfxCM5/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/berlin.jpg" alt="A street lamppost with several stickers and ads in Berlin.">
+            </a>
             <div class="article-info">
               <h4>Alexanderplatz</h4>
               <p>Berlin</p>
             </div>
           </div>          
           <div class="article-detail">
-            <img src="./assets/images/lock_pads.jpg" alt="">
+            <a href="https://www.instagram.com/p/4STR9LRCI9/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/lock_pads.jpg" alt="Several lock pads in a bridge in Paris.">
+            </a>
             <div class="article-info">
               <h4>Love Lock Bridge</h4>
               <p>Paris</p>
             </div>
           </div>          
           <div class="article-detail">
-            <img src="./assets/images/italy.jpg" alt="">
+            <a href="https://www.instagram.com/p/1_cOpXxCFj/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/italy.jpg" alt="A view of the old village of Lu, Piamonte in Italy.">
+            </a>
             <div class="article-info">
               <h4>Lu</h4>
               <p>Italy</p>
             </div>
           </div>
           <div class="article-detail">
-            <img src="./assets/images/louvre.jpg" alt="">
+            <a href="https://www.instagram.com/p/4SUecgxCLR/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/louvre.jpg" alt="Crystal pyramid of Louvre Museum.">
+            </a>
             <div class="article-info">
               <h4>Louvre</h4>
               <p>Paris</p>
             </div>
           </div>
           <div class="article-detail">
-            <img src="./assets/images/trini-on-pink.jpg" alt="">
+            <a href="https://www.instagram.com/p/2HvnXPxCM0/?utm_source=ig_web_copy_link" target="_blank">
+              <img src="./assets/images/trini-on-pink.jpg" alt="Girl walking down a colorful hallway.">
+            </a>
             <div class="article-info">
               <h4>Da Vinvi Museum</h4>
               <p>Milan</p>
@@ -158,9 +175,6 @@
   </section>
   <!-- main section end -->
 
-  <!-- footer section start -->
-
-  <!-- footer section end -->
 </body>
 </html>
 
