--- a/develop/index.html
+++ b/develop/index.html
@@ -29,7 +29,7 @@
           <a href="#contact-me">Contact Me</a>
         </li>   
         <li>
-          <a href="#">Resume</a>
+          <a href="https://github.com/brberis" target="_blank">Resume</a>
         </li>                
       </ul>
     </nav>
