--- a/develop/index.html
+++ b/develop/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
-  <title>Cristobal A Barberis - Photography Portfolio</title>
+  <title>Cristobal A Barberis - Project Portfolio</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -41,7 +41,7 @@
   <section class="hero">
     <!-- lead text -->
     <div>
-      <h2>My Photography Portfolio</h2>
+      <h2>My Project Portfolio</h2>
     </div>
   </section>
   <!-- hero section end -->
@@ -56,14 +56,11 @@
       </div>
       <div class="main-content">
         <p>
-          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
-          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+          I'm passionated about computer science and programming. Continuing lerning from every challenge I'm presented with. Building knowledge on every step, a process that never stop.
         </p>
         <br />
         <p>
-          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
-          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
-          ipsum dolor sit amet consectetur adipisicing elit. Beatae esse fuga fugiat, et accusamus animi voluptatum debitis officiis a, eligendi corrupti! Velit sequi dicta accusamus quos repudiandae aperiam alias in.
+          Here are my latest projects and collabotaions.      
         </p>
       </div>
     </section>
@@ -76,66 +73,66 @@
       <div class="main-content">
         <article>
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/2zKEkXxCJR/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/old_building.jpg" alt="Historic building with red windows shutters.">
+            <a href="https://github.com/brberis/nft-force" target="_blank">
+              <img src="https://github.com/brberis/nft-force/raw/main/Develop/assets/images/web.png" alt="Historic building with red windows shutters.">
             </a>
             <div class="article-info">
-              <h4>Historic Building</h4>
-              <p>Amsterdam</p>
+              <h4>NFT Force</h4>
+              <p>JavaScript/ APIs</p>
             </div>
           </div>
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/4xauYsxCGn/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/beings.jpg" alt="Metalic shelfs with all type of species preserved in bottles.">
+            <a href="https://github.com/brberis/cbr-weather-api" target="_blank">
+              <img src="https://github.com/brberis/cbr-weather-api/raw/main/Develop/assets/images/web.png" alt="Metalic shelfs with all type of species preserved in bottles.">
             </a>
             <div class="article-info">
-              <h4>Natural Musem</h4>
-              <p>Berlin</p>
+              <h4>Weather Dashboard</h4>
+              <p>JavaScript/ API</p>
             </div>
           </div> 
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/1grlYfxCM5/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/berlin.jpg" alt="A street lamppost with several stickers and ads in Berlin.">
+            <a href="https://github.com/brberis/jq-work-day-cal" target="_blank">
+              <img src="https://github.com/brberis/jq-work-day-cal/raw/main/Develop/assets/images/web.png" alt="A street lamppost with several stickers and ads in Berlin.">
             </a>
             <div class="article-info">
-              <h4>Alexanderplatz</h4>
-              <p>Berlin</p>
+              <h4>Work Day Calendar</h4>
+              <p>jQuery / MomentJS</p>
             </div>
           </div>          
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/4STR9LRCI9/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/lock_pads.jpg" alt="Several lock pads in a bridge in Paris.">
+            <a href="https://github.com/brberis/tm-quiz-sve" target="_blank">
+              <img src="https://github.com/brberis/tm-quiz-sve/raw/main/Develop/assets/images/web.png" alt="Several lock pads in a bridge in Paris.">
             </a>
             <div class="article-info">
-              <h4>Love Lock Bridge</h4>
-              <p>Paris</p>
+              <h4>Simple Quiz</h4>
+              <p>JavaScript</p>
             </div>
           </div>          
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/1_cOpXxCFj/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/italy.jpg" alt="A view of the old village of Lu, Piamonte in Italy.">
+            <a href="https://github.com/brberis/js-pswd-gen" target="_blank">
+              <img src="https://github.com/brberis/js-pswd-gen/raw/main/Develop/assets/images/web.png" alt="A view of the old village of Lu, Piamonte in Italy.">
             </a>
             <div class="article-info">
-              <h4>Lu</h4>
-              <p>Italy</p>
+              <h4>Password Generator</h4>
+              <p>JavaScript</p>
             </div>
           </div>
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/4SUecgxCLR/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/louvre.jpg" alt="Crystal pyramid of Louvre Museum.">
+            <a href="https://github.com/brberis/hseon-refactor" target="_blank">
+              <img src="https://camo.githubusercontent.com/07ea487bcfccc8f89b6a485fc78a30a62ae3bde18b7824e3769766eda2242da8/68747470733a2f2f627262657269732e6769746875622e696f2f6873656f6e2d7265666163746f722f7372632f6173736574732f696d616765732f30312d68746d6c2d6373732d6769742d686f6d65776f726b2d64656d6f2e706e67" alt="Crystal pyramid of Louvre Museum.">
             </a>
             <div class="article-info">
-              <h4>Louvre</h4>
-              <p>Paris</p>
+              <h4>Website Refactor</h4>
+              <p>HTML/ CSS</p>
             </div>
           </div>
           <div class="article-detail">
-            <a href="https://www.instagram.com/p/2HvnXPxCM0/?utm_source=ig_web_copy_link" target="_blank">
-              <img src="./assets/images/trini-on-pink.jpg" alt="Girl walking down a colorful hallway.">
+            <a href="https://github.com/brberis/dbl-portfolio-pro" target="_blank">
+              <img src="https://camo.githubusercontent.com/fb7ddb5b7a13bba7176a496bf34458378ae8d934bb33238d99bf20758db88b45/68747470733a2f2f627262657269732e6769746875622e696f2f64626c2d706f7274666f6c696f2d70726f2f646576656c6f702f6173736574732f696d616765732f7765622e706e67" alt="Girl walking down a colorful hallway.">
             </a>
             <div class="article-info">
-              <h4>Da Vinvi Museum</h4>
-              <p>Milan</p>
+              <h4>Portfolio Web App</h4>
+              <p>HTML/ CSS</p>
             </div>
           </div>
         </article>
@@ -152,7 +149,7 @@
         <nav class="footer-menu">
           <ul>
             <li>
-              <a href="tel:">(555) 555-5555</a>
+              <a href="tel:">(786) 354-5435</a>
             </li>
             <li>
               <a href="mailto:">cristobal@barberis.com</a>
