--- a/develop/index.html
+++ b/develop/index.html
@@ -73,8 +73,17 @@
       <div class="main-content">
         <article>
           <div class="article-detail">
+            <a href="https://github.com/brberis/dev-connect-portfolio-sharing" target="_blank">
+              <img src="https://github.com/brberis/dev-connect-portfolio-sharing/raw/main/assets/images/web.png?raw=true" alt="Screenshot of the application.">
+            </a>
+            <div class="article-info">
+              <h4>Dev Connect</h4>
+              <p>Node/ Handlebars</p>
+            </div>
+          </div>
+          <div class="article-detail">
             <a href="https://github.com/brberis/nft-force" target="_blank">
-              <img src="https://github.com/brberis/nft-force/raw/main/Develop/assets/images/web.png" alt="Historic building with red windows shutters.">
+              <img src="https://github.com/brberis/nft-force/raw/main/Develop/assets/images/web.png" alt="Screenshot of the application.">
             </a>
             <div class="article-info">
               <h4>NFT Force</h4>
@@ -83,7 +92,7 @@
           </div>
           <div class="article-detail">
             <a href="https://github.com/brberis/cbr-weather-api" target="_blank">
-              <img src="https://github.com/brberis/cbr-weather-api/raw/main/Develop/assets/images/web.png" alt="Metalic shelfs with all type of species preserved in bottles.">
+              <img src="https://github.com/brberis/cbr-weather-api/raw/main/Develop/assets/images/web.png" alt="Screenshot of the application.">
             </a>
             <div class="article-info">
               <h4>Weather Dashboard</h4>
@@ -92,7 +101,7 @@
           </div> 
           <div class="article-detail">
             <a href="https://github.com/brberis/jq-work-day-cal" target="_blank">
-              <img src="https://github.com/brberis/jq-work-day-cal/raw/main/Develop/assets/images/web.png" alt="A street lamppost with several stickers and ads in Berlin.">
+              <img src="https://github.com/brberis/jq-work-day-cal/raw/main/Develop/assets/images/web.png" alt="Screenshot of the application.">
             </a>
             <div class="article-info">
               <h4>Work Day Calendar</h4>
@@ -110,7 +119,7 @@
           </div>          
           <div class="article-detail">
             <a href="https://github.com/brberis/js-pswd-gen" target="_blank">
-              <img src="https://github.com/brberis/js-pswd-gen/raw/main/Develop/assets/images/web.png" alt="A view of the old village of Lu, Piamonte in Italy.">
+              <img src="https://github.com/brberis/js-pswd-gen/raw/main/Develop/assets/images/web.png" alt="Screenshot of the application.">
             </a>
             <div class="article-info">
               <h4>Password Generator</h4>
